--- a/Index.html
+++ b/Index.html
@@ -96,11 +96,30 @@
                             </div>
                             <div class="details">
                                 <span class="name">MacDaniel Chukwulete</span>
-                                <span class="position">Creative Director</span>
+                                <span class="position">CD/Co-founder</span>
                                 <span class="function">UI/UX Designer</span>
                             </div>
                 </div>
                     </div>
+                    
+                    <div class="usall">
+                        <div class="card">
+                            <div class="pics">
+                                <img src="IMG-20220604-WA0003.jpg" width="50">
+                            </div>
+                            <div class="icons">
+                                <a href="https://www.instagram.com/rem.omeike1"><img src="instagram-1.png" width="15"></a>
+                                <a href="https://twitter.com/RemOmeike"><img src="twitter-1.png" width="15"></a>
+                                <a href="#"><img src="linkedin.png" width="15"></a>
+                            </div>
+                            <div class="details">
+                                <span class="name">Remigius Omeike</span>
+                                <span class="position">Financial Director</span>
+                                <span class="function">Banker</span>
+                            </div>
+                </div>
+                    </div>
+                    
                     <div class="usall">
                         <div class="card">
                             <div class="pics">
