--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
         <title>Company & Support</title>
         <link rel="shortcut icon" type="image/png" href="ovalsmall.png">
         <link rel="stylesheet" href="CompanySupport.css">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3080921925419340"
+     crossorigin="anonymous"></script>
     </head>
     <body>
         <div id="header">
