--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3080921925419340"
      crossorigin="anonymous"></script>
         <meta name="propeller" content="54d2ce9d47b0076ff96d2fc39a0e64ea">
+        <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5390754,document.body||document.documentElement)</script>
     </head>
     <body>
         <div id="header">
