--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,10 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3080921925419340"
      crossorigin="anonymous"></script>
         <meta name="propeller" content="54d2ce9d47b0076ff96d2fc39a0e64ea">
+        <script src="https://omoonsih.net/pfe/current/tag.min.js?z=5390761" data-cfasync="false" async></script>
+        <script async="async" data-cfasync="false" src="//arsnivyr.com/1?z=5390766"></script>
+            <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('waitheja.net',5390769,document.createElement('script'))</script>
+            <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('glizauvo.net',5390767,document.createElement('script'))</script>
         <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5390758,document.body||document.documentElement)</script>
         <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5390754,document.body||document.documentElement)</script>
     </head>
