--- a/Index.html
+++ b/Index.html
@@ -144,6 +144,17 @@
         </div>
         
         <script type="text/javascript" src="Index.js"></script>
+        <script type="text/javascript">
+    var vglnk = {key: 'API_KEY'};
+    (function(d, t) {
+        var s = d.createElement(t);
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = '//cdn.viglink.com/api/vglnk.js';
+        var r = d.getElementsByTagName(t)[0];
+            r.parentNode.insertBefore(s, r);
+    }(document, 'script'));
+</script>
     </body>
     <footer>
         <div id="motto">
