--- a/Index.html
+++ b/Index.html
@@ -155,6 +155,7 @@
             r.parentNode.insertBefore(s, r);
     }(document, 'script'));
 </script>
+        <script type="text/javascript"> var infolinks_pid = 3374964; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
     </body>
     <footer>
         <div id="motto">
